[gd_scene load_steps=7 format=3 uid="uid://cwlfcxp8tvp2l"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_lo5y4"]
[ext_resource type="Shader" path="res://assets/shaders/vignette_shader.gdshader" id="1_vie2o"]
[ext_resource type="Theme" uid="uid://bmvf1xw0j8v56" path="res://assets/fonts/text_back.tres" id="2_m418s"]
[ext_resource type="Theme" uid="uid://ci23fbpwtupdm" path="res://assets/fonts/text_front.tres" id="3_nkr56"]
[ext_resource type="Texture2D" uid="uid://bbqspuqhxgmp5" path="res://assets/images/bubble-ui.png" id="5_inbjm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jnh2b"]
shader = ExtResource("1_vie2o")
shader_parameter/inner_radius = 0.17
shader_parameter/outer_radius = 0.86
shader_parameter/vignette_strength = 1.0
shader_parameter/dither_strength = 0.1
shader_parameter/vignette_color = Color(0.0257117, 0.122565, 0.188074, 1)

[node name="Hud" type="Node3D"]
script = ExtResource("1_lo5y4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="vignette" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_jnh2b")
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 1

[node name="level" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = -18.0
offset_top = 505.0
offset_right = -18.0
offset_bottom = 505.0

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/level"]
layout_mode = 0
offset_left = 48.0
offset_top = 53.0
offset_right = 262.0
offset_bottom = 131.0
theme = ExtResource("2_m418s")
theme_override_font_sizes/normal_font_size = 50
text = " level"
scroll_active = false

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/level"]
layout_mode = 0
offset_left = 48.0
offset_top = 53.0
offset_right = 291.0
offset_bottom = 128.0
theme = ExtResource("3_nkr56")
theme_override_font_sizes/normal_font_size = 50
text = " level "
scroll_active = false

[node name="Control" type="Control" parent="CanvasLayer/level"]
anchors_preset = 0
offset_left = 145.0
offset_right = 185.0
offset_bottom = 40.0

[node name="level_count" type="RichTextLabel" parent="CanvasLayer/level/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 48.0
offset_top = 53.0
offset_right = 563.0
offset_bottom = 187.0
theme = ExtResource("2_m418s")
theme_override_font_sizes/normal_font_size = 50
text = " 0"
scroll_active = false

[node name="level_count2" type="RichTextLabel" parent="CanvasLayer/level/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 48.0
offset_top = 53.0
offset_right = 978.0
offset_bottom = 205.0
theme = ExtResource("3_nkr56")
theme_override_font_sizes/normal_font_size = 50
text = " 0"
scroll_active = false

[node name="bubbles" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 1023.0
offset_top = -32.0
offset_right = 1023.0
offset_bottom = -32.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/bubbles"]
layout_mode = 0
offset_left = -39.0
offset_top = 63.0
offset_right = 121.0
offset_bottom = 223.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_inbjm")

[node name="Control" type="Control" parent="CanvasLayer/bubbles"]
anchors_preset = 0
offset_left = -29.0
offset_right = 11.0
offset_bottom = 40.0

[node name="bubble_count" type="RichTextLabel" parent="CanvasLayer/bubbles/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 48.0
offset_top = 53.0
offset_right = 262.0
offset_bottom = 131.0
theme = ExtResource("2_m418s")
theme_override_font_sizes/normal_font_size = 50
text = " 0"
scroll_active = false

[node name="bubble_count2" type="RichTextLabel" parent="CanvasLayer/bubbles/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 48.0
offset_top = 53.0
offset_right = 291.0
offset_bottom = 128.0
theme = ExtResource("3_nkr56")
theme_override_font_sizes/normal_font_size = 50
text = " 0"
scroll_active = false

[node name="timer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 9.0
offset_top = -32.0
offset_right = 49.0
offset_bottom = 8.0

[node name="timer" type="RichTextLabel" parent="CanvasLayer/timer"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 48.0
offset_top = 53.0
offset_right = 262.0
offset_bottom = 131.0
theme = ExtResource("2_m418s")
theme_override_font_sizes/normal_font_size = 50
text = " 60"
scroll_active = false

[node name="timer2" type="RichTextLabel" parent="CanvasLayer/timer"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 48.0
offset_top = 53.0
offset_right = 291.0
offset_bottom = 128.0
theme = ExtResource("3_nkr56")
theme_override_font_sizes/normal_font_size = 50
text = " 60"
scroll_active = false

[node name="BlackScreen" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 1
color = Color(0, 0, 0, 1)
